# qGenie-be

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/: README.md  __init__.py  firebase_service_account.json  main.py  pyproject.toml  test_json.json
backend/assets/: qgenie_kb.csv
backend/auth/: __init__.py  firebase_utils.py  jwt_utils.py  routes.py  schemas.py  utils.py
backend/chat/: __init__.py  bucket-access-keys.json  example.ipynb  paper_generation.py  prompt_processor.py  routes.py  service-account-key.json  utils.py
backend/db/: __init__.py  config.py  database.py  models.py  populate_curriculums.py  reset_db.py
backend/educator/: routes.py
backend/paper_props/: routes.py  schemas.py
