[project]
name = "qgenie-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "google-cloud-storage>=3.2.0",
    "google-cloud-vision>=3.10.2",
    "google-genai>=1.27.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pdf2image>=1.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
]